# ChangeLog for app-emacs/pymacs
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/pymacs/ChangeLog,v 1.40 2009/01/29 07:20:41 fauli Exp $

  29 Jan 2009; Christian Faulhammer <fauli@gentoo.org>
  -files/0.22-character-encoding-gentoo.patch, -pymacs-0.22-r1.ebuild:
  clean up

  24 Nov 2008; Ulrich Mueller <ulm@gentoo.org> pymacs-0.23.ebuild:
  Remove test from IUSE, bug 232497.

  24 Nov 2008; Christian Faulhammer <opfer@gentoo.org> pymacs-0.23.ebuild:
  Additional USE=test dependency is not needed as the real failure from bug
  232497 is connected to USE=doc

  20 Nov 2008; Ulrich Mueller <ulm@gentoo.org> pymacs-0.23.ebuild:
  Additional dependencies with USE=doc for multirow.sty and aeguill.sty,
  fixes bug 247703.

  27 Oct 2008; Ulrich Mueller <ulm@gentoo.org> pymacs-0.23.ebuild:
  Replace virtual/tetex dependency by tetex or ptex, bug 222501.

  25 Jul 2008; Ulrich Mueller <ulm@gentoo.org> pymacs-0.23.ebuild:
  Add virtual/tetex into any-of-many dependency, bug 232497.

  21 Jul 2008; Christian Faulhammer <opfer@gentoo.org> pymacs-0.23.ebuild:
  add USE=test with dependency on dev-texlive/texlive-langfrench, needed to
  fix bug 232497, reported by carlo

  09 Jul 2008; Markus Rothe <corsair@gentoo.org> pymacs-0.23.ebuild:
  Stable on ppc64; bug #212241

  21 May 2008; Ulrich Mueller <ulm@gentoo.org> pymacs-0.23.ebuild:
  Set VARTEXFONTS, bug 223077.

  23 Mar 2008; Raúl Porcel <armin76@gentoo.org> pymacs-0.23.ebuild:
  ia64 stable wrt #214246

  22 Mar 2008; nixnut <nixnut@gentoo.org> pymacs-0.23.ebuild:
  Stable on ppc wrt bug 214246

  22 Mar 2008; Christian Faulhammer <opfer@gentoo.org> pymacs-0.23.ebuild:
  stable x86/amd64, bug 214246

*pymacs-0.23 (16 Feb 2008)

  16 Feb 2008; Ulrich Mueller <ulm@gentoo.org> -pymacs-0.23_beta7.ebuild,
  -pymacs-0.23_beta9.ebuild, +pymacs-0.23.ebuild:
  Version bump.

*pymacs-0.23_beta9 (14 Feb 2008)
